samples/_failures_safe/1761393862_57531d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0cb679c4.c: In function ‘main’:
./samples/SAFE/__tmp_0cb679c4.c:150:21: error: expected declaration or statement at end of input
  150 |                     printf("Matrix A + B:\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_0cb679c4.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0cb679c4.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0cb679c4.c:150:21: error: expected declaration or statement at end of input
